--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,44 @@
 /* You can add global styles to this file, and also import other style files */
+
+/* Global */
+* {
+	box-sizing: border-box;
+	transition: 0.3s;
+}
+body {
+	color: #444;
+	margin: 0;
+	font-family: 'Open Sans', 'Helvetica', 'Arial', sans-serif;
+	font-size: 16px;
+}
+h1, h2, h3, h4, h5, h6 {
+	text-transform: uppercase;
+}
+h1, h2, h3, h4, h5, h6, p, a {
+	font-weight: 300;	
+}
+h1 { font-size: 3em }
+h2 { font-size: 2.5em }
+h3 { font-size: 2em }
+h4 { font-size: 1.5em }
+h5 { font-size: 1em }
+h6 { font-size: 0.5em }
+p  { font-size: 1em }
+
+/* Modules */
+app-root {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	float: left;
+}
+.load-screen {
+	width: 200px;
+	height: auto;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
