--- a/src/app/logo/logo.component.scss
+++ b/src/app/logo/logo.component.scss
@@ -1,20 +1,13 @@
-li {
-	list-style-type: none;
-}
-.logo {
-	width: 100%;
-	padding: 20px;
-	float: left;
+#logo {
+	background: url('../../assets/images/activoter-logo.png');
+	background-size: cover;
+	width: 80px;
+	height: 80px;
+	margin: 0 auto;
+	opacity: 0.9;
 	&:hover {
-		background: rgba(0, 0, 0, 0.1);
-	}
-	img {
-		width: 50%;
-		margin: 0 auto;
-		opacity: 0.9;
-		display: block;
-		&:hover {
-			opacity: 1;
-		}
+		background: url('../../assets/images/activoter-logo-color.png');
+		background-size: cover;
+		opacity: 1;
 	}
 }
