--- a/src/app/nav-item/nav-item.component.scss
+++ b/src/app/nav-item/nav-item.component.scss
@@ -9,8 +9,17 @@ a {
 	text-transform: uppercase;
 	text-align: center;
 	text-decoration: none;
-	&:hover {
+	outline: none;
+	&.active {
 		background: rgba(0, 0, 0, 0.1);
+	}
+	&:hover, &:focus {
+		background: rgba(0, 0, 0, 0.2);
 		color: #fff;
 	}
+}
+.logo {
+	width: 100%;
+	padding: 20px;
+	float: left;
 }
