--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,7 +13,7 @@ body, button {
 	font-family: 'Open Sans', 'Helvetica', 'Arial', sans-serif;
 	font-size: 16px;
 }
-h1, h2, h5, h6 {
+h1, h5, h6 {
 	text-transform: uppercase;
 }
 h1, h2, h3, h4, h5, h6, p, a, li, button {
