--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,7 +7,7 @@
 	box-sizing: border-box;
 	transition: 0.3s;
 }
-body, button {
+body, button, input[type=submit] {
 	color: #333;
 	margin: 0;
 	font-family: 'Open Sans', 'Helvetica', 'Arial', sans-serif;
@@ -16,7 +16,7 @@ body, button {
 h1, h5, h6 {
 	text-transform: uppercase;
 }
-h1, h2, h3, h4, h5, h6, p, a, li, button {
+h1, h2, h3, h4, h5, h6, p, a, li, button, input {
 	font-weight: 300;	
 }
 h1 { font-size: 3em }
