User management views

--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -5,4 +5,5 @@
 		<input type='password' name='password'  placeholder='Password' [(ngModel)]='user.password' required />
 		<input type='submit' name='signup' value='Sign up'>
 	</form>
+	<p>Already registered? <a routerLink='/login'>Log in</a></p>
 </div>
