--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,4 +5,5 @@
 		<input type='password' name='password'  placeholder='Password' [(ngModel)]='user.password' required />
 		<input type='submit' name='login' value='Log in'>
 	</form>
+	<p>Don't have an account yet? <a routerLink='/signup'>Sign up</a></p>
 </div>
