--- a/src/app/nav-item/nav-item.component.html
+++ b/src/app/nav-item/nav-item.component.html
@@ -1,8 +1,8 @@
 <li>
-	<a class='logo' routerLink="/home" routerLinkActive="active">
+	<a class='logo' routerLink='/home' routerLinkActive='active'>
 		<app-logo></app-logo>
 	</a>
 </li>
 <li *ngFor='let page of pages'>
-	<a routerLink="/{{page.name}}" routerLinkActive="active">{{page.name}}</a>
+	<a routerLink='/{{page.name}}' routerLinkActive='active'>{{page.name}}</a>
 </li>
